examples/test/testpolicy13321.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13321
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key19: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value24
          key49: value17
          key18: value43
      podSelector:
        matchLabels:
          key23: value46
